--- a/index.css
+++ b/index.css
@@ -1,11 +1,18 @@
 body {
     background-image: url("yarn.jpeg");
     background-size: cover;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
+    height: 100vh;
 }
-
+.container{
+    background-color: bisque;
+    max-width: 70%;
+    margin: auto;
+    border: 3px black solid ;
+    border-radius: 10px;
+}
 h1 {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -18,7 +25,6 @@ h2 {
 }
 
 button {
-    border: none;
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
@@ -26,13 +32,14 @@ button {
     width: 200px;
     margin-bottom: 5px;
     border-radius: 5px;
+    border: 3px black solid ;
 }
 
 #increment-btn {
-    background: darkred;
+    background: rgb(46, 28, 237);
 }
 
 #save-btn {
-    background: darkgreen;
+    background: rgb(14, 229, 14);
 }
 
