--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("yarn.jpeg");
+    background-image: url("the-flash-comics.webp");
     background-size: cover;
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
@@ -7,10 +7,10 @@ body {
     height: 100vh;
 }
 .container{
-    background-color:transparent;
+    background: rgba(255, 255, 255, .1);
     max-width: 70%;
     margin: auto;
-    border: 3px black solid ;
+    border: 2px rgba(255, 255, 255, .2);
     border-radius: 10px;
 }
 h1 {
