--- a/index.css
+++ b/index.css
@@ -1,30 +1,57 @@
 body {
     background-image: url("theflash.jpg");
     background-size: cover;
-    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:"Trade Winds", serif;
     font-weight: bold;
+    
+    justify-content: center;
     text-align: center;
     height: 100vh;
+    
 }
 .container{
-    background: rgba(255, 255, 255, .1);
-    max-width: 70%;
+    background: rgba(255, 255, 255, 0.473);
+    max-width: 60%;
+    min-height: 70%;
     margin: auto;
-    border: 2px rgba(255, 255, 255, .2);
+    border: 2px black;
     border-radius: 10px;
+    box-shadow: 8px 10px 5px rgba(11, 10, 10, 0.391);
+    padding: 30px;
 }
 h1 {
+    font-family: "Trade Winds", serif;
+  font-weight: 400;
+  font-style: normal;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 h2 {
+    font-family: "Trade Winds", serif;
+    font-weight: 400;
+    font-style: normal;
     font-size: 50px;
     margin-top: 0;
     margin-bottom: 20px;
 }
 
+p{
+  
+    font-size: 20px;
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-family: "Trade Winds", serif;
+    font-weight: 25;
+    font-style: normal;
+
+}
+
+
+
 button {
+    font-family: "Trade Winds", serif;
+
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
@@ -32,14 +59,14 @@ button {
     width: 200px;
     margin-bottom: 5px;
     border-radius: 5px;
-    border: 3px black solid ;
+    border: 3px rgba(11, 10, 10, 0.568) solid ;
 }
 
 #increment-btn {
-    background: rgb(46, 28, 237);
+    background: rgba(27, 7, 245, 0.685);
 }
 
 #save-btn {
-    background: rgb(14, 229, 14);
+    background: rgba(14, 229, 14, 0.589);
 }
 
