--- a/index.css
+++ b/index.css
@@ -1,22 +1,22 @@
 body {
     background-image:url("theflash.jpg");
     background-size: cover;
+    background-position: center;
     font-family:"Trade Winds", serif;
     font-weight: bold;
     justify-content:  center;
     text-align: center;
-    height: 100vh;
-    
+    background-attachment: fixed;    
 }
 .container {
-    background: rgba(12, 11, 11, 0.761);
+    backdrop-filter: blur(10px);
     max-width: 40%;
     min-height: 70%;
     margin: auto;
     border: 3px solid transparent;
     border-radius: 25px;
     padding: 30px;
-    box-shadow: 0 0 20px rgba(255, 215, 0, 0.8), 0 0 30px rgba(255, 69, 0, 0.8);
+    box-shadow: 0 0 20px rgba(13, 13, 13, 0.8), 0 0 30px rgba(255, 69, 0, 0.8);
 }
 
 
@@ -24,8 +24,8 @@ h1 {
     font-family: "Trade Winds", serif;
   font-weight: 400;
   -webkit-text-stroke-width: 0.5px;
-  -webkit-text-stroke-color: rgb(247, 247, 247);
-  color: goldenrod;
+  -webkit-text-stroke-color: rgb(249, 249, 249);
+  color: rgb(10, 10, 10);
   font-style: normal;
   min-width: auto;
     margin-top: 10px;
@@ -36,9 +36,9 @@ h2 {
     font-family: "Trade Winds", serif;
     font-weight: 400;
     -webkit-text-stroke-width: 0.5px;
-    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-color: rgb(252, 249, 249);
     font-style: normal;
-    color: goldenrod;
+    color: rgb(16, 16, 15);
     font-size: 50px;
     margin-top: 0;
     margin-bottom: 20px;
@@ -48,7 +48,7 @@ p{
   
     font-size: 20px;
     margin-top: 40 ;
-    color: red;
+    color: rgb(18, 17, 17);
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: rgb(246, 241, 241);
     color-scheme: dark blue;
